# ayatana-indicator-datetime

./: .build.yml  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  INSTALL.md  NEWS  README  README.md  trim-lcov.py  update-po.sh  update-pot.sh
cmake/: FindIntltool.cmake  GCov.cmake  GdbusCodegen.cmake
data/: CMakeLists.txt  ayatana-indicator-datetime.conf.in  ayatana-indicator-datetime.desktop.in  ayatana-indicator-datetime.service.in  ayatana-indicator-datetime.upstart.desktop.in  indicator-datetime.desktop.in  lomiri-indicator-datetime.service.in  org.ayatana.indicator.datetime  org.ayatana.indicator.datetime.AlarmProperties.xml  org.ayatana.indicator.datetime.gschema.xml  org.ayatana.indicator.datetime.gschema.xml.in  org.ayatana.indicator.datetime.gschema.xml.in.in
debian/: ayatana-indicator-datetime-common.install  ayatana-indicator-datetime.install  ayatana-indicator-datetime.links  changelog  control  copyright  lomiri-indicator-datetime.install  rules  watch
debian/upstream/: metadata
include/datetime/: actions-live.h  actions.h  alarm-queue-simple.h  alarm-queue.h  appointment.h  clock-mock.h  clock.h  date-time.h  dbus-shared.h  engine-eds.h  engine-mock.h  engine.h  exporter.h  formatter.h  locations-settings.h  locations.h  menu.h  myself.h  planner-aggregate.h  planner-month.h  planner-range.h  planner-snooze.h  planner-upcoming.h  planner.h  settings-live.h  settings-shared.h  settings.h  snap.h  state.h  timezone-geoclue.h  timezone-timedated.h  timezone.h  timezones-live.h  timezones.h  utils.h  wakeup-timer-mainloop.h  wakeup-timer-powerd.h  wakeup-timer.h
include/notifications/: awake.h  dbus-shared.h  haptic.h  notifications.h  sound.h
po/: POTFILES.in  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  ayatana-indicator-datetime.pot  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  (+95 more)
src/: CMakeLists.txt  actions-live.cpp  actions.cpp  alarm-queue-simple.cpp  appointment.cpp  awake.cpp  clock-live.cpp  clock.cpp  com.ubuntu.touch.AccountsService.Sound.xml  date-time.cpp  engine-eds.cpp  engine-mkcal.cpp  exporter.cpp  formatter-desktop.cpp  formatter.cpp  haptic.cpp  locations-settings.cpp  locations.cpp  main.cpp  menu.cpp  myself.cpp  notifications.cpp  planner-aggregate.cpp  planner-month.cpp  planner-range.cpp  planner-snooze.cpp  planner-upcoming.cpp  planner.cpp  settings-live.cpp  snap.cpp  sound.cpp  timezone-geoclue.cpp  timezone-timedated.cpp  timezones-live.cpp  utils.c  wakeup-timer-mainloop.cpp  wakeup-timer-powerd.cpp
tests/: CMakeLists.txt  actions-mock.h  geoclue-fixture.h  glib-fixture.h  libdbusmock-fixture.h  manual  manual-test-snap.cpp  notification-fixture.h  planner-mock.h  print-to.h  run-eds-ics-test.sh  run-mkcal-db-test.sh  state-fixture.h  state-mock.h  test-actions.cpp  test-alarm-queue.cpp  test-clock.cpp  test-datetime.cpp  test-dbus-fixture.h  test-eds-ics-alarm-custom-sound.cpp  test-eds-ics-alarm-custom-sound.db  test-eds-ics-alarm-custom-sound.ics.in  test-eds-ics-all-day-events.cpp  test-eds-ics-all-day-events.db  test-eds-ics-missing-trigger.cpp  test-eds-ics-missing-trigger.db  test-eds-ics-missing-trigger.ics.in  test-eds-ics-non-attending-alarms.cpp  test-eds-ics-non-attending-alarms.db  test-eds-ics-non-attending-alarms.ics.in  test-eds-ics-non-selected-source.cpp  test-eds-ics-non-selected-source.ics.in  test-eds-ics-nonrepeating-events.cpp  test-eds-ics-nonrepeating-events.db  test-eds-ics-nonrepeating-events.ics.in  test-eds-ics-repeating-events-with-indival-change.cpp  test-eds-ics-repeating-events-with-individual-change.cpp  test-eds-ics-repeating-events-with-individual-change.db  test-eds-ics-repeating-events-with-individual-change.ics.in  test-eds-ics-repeating-events.cpp  (+31 more)
